# voicet

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN_voicet-rust-rewrite.md  README.md  architecture2-UI.md  phase3.md  plan2xxx.md
candle-fork/candle-flash-attn/: build.rs
candle-fork/candle-flash-attn/kernels/: static_switch.h
huggingfaceexample/: pyproject.toml  test_hf_streaming.py  voicet.py
src/: common.rs  decoder.rs  encoder.rs  hotkey.rs  main.rs  mel.rs  settings.rs  settings_window.rs  streaming.rs  tokenizer.rs
